--- a/css-tutorial/styles/layout.css
+++ b/css-tutorial/styles/layout.css
@@ -35,7 +35,7 @@ footer {
 #about img {
     float: right;
     width: 40%;
-    margin: 0 4% 0 0%;
+    margin: 0 4% 0 0;
 }
 .syllabus {
     float: left;
