Fri, Apr 12, 2024, 10:40 PM +00:00

--- a/css-tutorial/styles/styles.css
+++ b/css-tutorial/styles/styles.css
@@ -57,11 +57,20 @@ nav {
 
 nav > ul {
     line-height: 2em;
+    list-style-type:none;
 }
 
 
 /* List Styles */
-
+.syllabus ol {
+    list-style-type: upper-roman;
+}
+.syllabus ol ol {
+    list-style-type: upper-alpha;
+}
+.syllabus ol ol {
+    list-style-type: upper-decimal;
+}
 
 
 
