Fri, Apr 12, 2024, 10:42 PM +00:00

--- a/css-tutorial/styles/styles.css
+++ b/css-tutorial/styles/styles.css
@@ -68,7 +68,7 @@ nav > ul {
 .syllabus ol ol {
     list-style-type: upper-alpha;
 }
-.syllabus ol ol {
+.syllabus ol ol ol {
     list-style-type: upper-decimal;
 }
 
