Fri, Apr 12, 2024, 10:46 PM +00:00

--- a/css-tutorial/styles/styles.css
+++ b/css-tutorial/styles/styles.css
@@ -61,7 +61,9 @@ nav > ul {
     padding-left: 5px;
 }
 
-nav > ul > 
+nav > ul > li.newgroup {
+    margin-top: 20px;
+}
 
 /* List Styles */
 .syllabus ol {
