Fri, Apr 12, 2024, 10:47 PM +00:00

--- a/css-tutorial/styles/styles.css
+++ b/css-tutorial/styles/styles.css
@@ -47,7 +47,10 @@ aside {
     font-size: 0.8em;
 }
 
-
+aside blockquote {
+    color: rgb(232, 26, 116);
+    margin: 20px 3px;
+}
 
 
 /* Navigation Styles */
