--- a/css-tutorial/styles/styles.css
+++ b/css-tutorial/styles/styles.css
@@ -68,6 +68,18 @@ nav > ul > li.newgroup {
     margin-top: 20px;
 }
 
+nav > ul > li > a:link,
+nav > ul > li > a:visited {
+    color: rgb(151, 151, 151);
+    text-decoration: none;
+}
+
+nav > ul > li > a:hover,
+nav > ul > li > a:active {
+    color: rgb(255, 64, 25);
+    text-decoration: dotted;
+}
+
 /* List Styles */
 .syllabus ol {
     list-style-type: upper-roman;
