--- a/css-tutorial/styles/styles.css
+++ b/css-tutorial/styles/styles.css
@@ -77,7 +77,7 @@ nav > ul > li > a:visited {
 nav > ul > li > a:hover,
 nav > ul > li > a:active {
     color: rgb(255, 64, 25);
-    text-decoration: dotted;
+    text-decoration: underline dotted;
 }
 
 /* List Styles */
