--- a/css-tutorial/styles/layout.css
+++ b/css-tutorial/styles/layout.css
@@ -1,3 +1,30 @@
 @charset "utf-8";
 /* We'll add our layout styles here */
 
+body {
+
+}
+
+header {
+
+}
+
+nav {
+
+}
+
+aside {
+
+}
+
+footer {
+
+}
+
+#about {
+
+}
+
+.syllabus {
+    
+}
