Fri, Apr 12, 2024, 11:25 PM +00:00

--- a/css-tutorial/styles/layout.css
+++ b/css-tutorial/styles/layout.css
@@ -2,20 +2,24 @@
 /* We'll add our layout styles here */
 
 body {
+    margin: 0 auto;
     width: 100%:
     max-width: 1020px;
     min-width: 640px;
 }
 
 header {
+    margin: 0;
     width: 100%;
 }
 
 nav {
+    margin: 0 0 0 1.5%;
     width: 20%;
 }
 
 aside {
+    margin: 0 1.5% 0 0;
     width: 20%;
 }
 
@@ -24,6 +28,7 @@ footer {
 }
 
 #about {
+    margin: 0 3% 0 3%;
     width: 51%;
 }
 
