--- a/css-tutorial/styles/layout.css
+++ b/css-tutorial/styles/layout.css
@@ -3,7 +3,7 @@
 
 body {
     margin: 0 auto;
-    width: 100%:
+    width: 100%;
     max-width: 1020px;
     min-width: 640px;
 }
@@ -16,11 +16,13 @@ header {
 nav {
     margin: 0 0 0 1.5%;
     width: 20%;
+    float: left;
 }
 
 aside {
     margin: 0 1.5% 0 0;
     width: 20%;
+    float: left;
 }
 
 footer {
@@ -30,8 +32,10 @@ footer {
 #about {
     margin: 0 3% 0 3%;
     width: 51%;
+    float: left;
 }
 
 .syllabus {
     width: 74.5%;
+    float: left;
 }
