--- a/css-tutorial/styles/styles.css
+++ b/css-tutorial/styles/styles.css
@@ -12,11 +12,11 @@ body {
 }
 
 /* Heading Styles */
-h1 {
+#about h1 {
     color: white;
     background-color: rgb(222, 128, 60);
 }
-h2 {
+#about h2 {
     color: white;
     background-color: rgb(235, 177, 131);
 }
