--- a/css-tutorial/styles/styles.css
+++ b/css-tutorial/styles/styles.css
@@ -14,9 +14,10 @@ body {
 }
 
 /* Heading Styles */
-h1, h2 {
-    font-family: Quicksand, Geneva, Verdana, sans-serif;
-}
+h1 { font-size: 2.2em; }
+h2 { font-size: 1.1em; }
+h1, h2 { font-family: Quicksand, Geneva, Verdana, sans-serif; }
+
 #about h1 {
     color: white;
     background-color: rgb(222, 128, 60);
