--- a/css-tutorial/styles/styles.css
+++ b/css-tutorial/styles/styles.css
@@ -16,7 +16,10 @@ body {
 /* Heading Styles */
 h1 { font-size: 2.2em; }
 h2 { font-size: 1.1em; }
-h1, h2 { font-family: Quicksand, Geneva, Verdana, sans-serif; }
+h1, h2 {
+    font-family: Quicksand, Geneva, Verdana, sans-serif;
+    letter-spacing: 0.1em;
+}
 
 #about h1 {
     color: white;
@@ -36,6 +39,9 @@ h1, h2 { font-family: Quicksand, Geneva, Verdana, sans-serif; }
 
 
 /* Navigation Styles */
+nav > ul {
+    line-height: 2em;
+}
 
 
 /* List Styles */
