--- a/css-tutorial/styles/styles.css
+++ b/css-tutorial/styles/styles.css
@@ -48,5 +48,11 @@ nav > ul {
 
 
 /* Footer Styles */
+footer address {
+    background-color: rgb(222, 128, 60);
+    color: rgba(255, 255, 255, 0.7);
+    font: normal small-caps bold 0.9em/3em Quicksand, Geneva, Verdana, sans-serif;
+    text-align: center;
+}
 
 
