Sat, Apr 13, 2024, 12:09 AM +00:00

--- a/css-tutorial/styles/styles.css
+++ b/css-tutorial/styles/styles.css
@@ -46,6 +46,15 @@ nav > ul {
 
 
 /* List Styles */
+.syllabus ol {
+    list-style-type: upper-roman;
+}
+.syllabus ol ol {
+    list-style-type: upper-alpha;
+}
+.syllabus ol ol ol{
+    list-style-type: decimal;
+}
 
 
 /* Footer Styles */
