Sat, Apr 13, 2024, 12:12 AM +00:00

--- a/css-tutorial/styles/styles.css
+++ b/css-tutorial/styles/styles.css
@@ -56,6 +56,9 @@ nav > ul {
     list-style-type: decimal;
 }
 
+#about ul li {
+    list-style-image: url(../images/runicon.png);
+}
 
 /* Footer Styles */
 footer address {
