--- a/css-tutorial/styles/styles.css
+++ b/css-tutorial/styles/styles.css
@@ -36,7 +36,10 @@ h1, h2 {
 }
 
 /* Aside and Blockquote Styles */
-
+ aside blockquote {
+    color: rgb(232, 165, 116);
+    margin: 20px 3px;
+ }
 
 /* Navigation Styles */
 nav > ul {
