--- a/css-tutorial/styles/styles.css
+++ b/css-tutorial/styles/styles.css
@@ -39,7 +39,21 @@ h1, h2 {
  aside blockquote {
     color: rgb(232, 165, 116);
     margin: 20px 3px;
+    quotes: "\201C" "\201D";
  }
+
+aside blockquote::before {
+    content: open-quote;
+    font-family: serif;
+    font-size: 1.6em;
+    font-weight: bold;
+}
+aside blockquote::after {
+    content: close-quote;
+    font-family: serif;
+    font-size: 1.6em;
+    font-weight: bold;
+}
 
 /* Navigation Styles */
 nav > ul {
